RESOLVED FIXED24276
Dropdown / select boxes do not consider the windows task bar in Chrome
https://bugs.webkit.org/show_bug.cgi?id=24276
Summary Dropdown / select boxes do not consider the windows task bar in Chrome
Kim Christensen
Reported 2009-03-01 13:55:49 PST
What steps will reproduce the problem? 1. Open Chrome 2. Go to http://www.joeterranova.net/code/breakchrome.php 3. Scroll to the bottom 4. Click the select box. What is the expected result? There's enough room to open the select box downward, but it is taken up by the Windows taskbar. The dropdown should either be shown over the taskbar, or opened upward instead. Also tracked in the Chromium bug tracker at http://code.google.com/p/chromium/issues/detail?id=127 What happens instead? The dropdown opens downward, under the taskbar. Therefore, not all choices are visible. Screenshot attached so you can see the orientation of things. Might not happen the same way if your taskbar is for example larger or smaller.
Attachments
Patch (686 bytes, patch)
2009-03-01 14:02 PST, Kim Christensen
no flags
Patch which fixed the dropdown rendering problem (1.26 KB, patch)
2009-03-01 14:08 PST, Kim Christensen
fishd: review+
Kim Christensen
Comment 1 2009-03-01 14:02:52 PST
Created attachment 28150 [details] Patch Patch where workarea of the screen are used instead of screen size
Kim Christensen
Comment 2 2009-03-01 14:08:56 PST
Created attachment 28151 [details] Patch which fixed the dropdown rendering problem Patch where the available screen size are used instead of the actual screen size
Darin Fisher (:fishd, Google)
Comment 3 2009-03-09 17:20:14 PDT
Comment on attachment 28151 [details] Patch which fixed the dropdown rendering problem LGTM, nice fix! In the future, please add your full name and email address to the ChangeLog. Also, it is a good idea to add a descriptive summary to the ChangeLog and include a link to this bug in there. Thanks for the fix!
Darin Fisher (:fishd, Google)
Comment 4 2009-03-09 17:23:04 PDT
Note You need to log in before you can comment on or make changes to this bug.