2009-03-09  Kim Christensen  <kimworking@gmail.com>

Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=24276
        Dropdown / select boxes do not consider the windows task bar in Chromium.

        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupContainer::showPopup):



Canonical link: https://commits.webkit.org/33608@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41542 268f45cc-cd09-0410-ab3c-d52691b4dbfc